test/errors/types/tuple_element_mismatch_fail.hy
int main()
{
    (int, string) bad = (1, 2)
    return 0
}
